kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudcart-backend-service

spec:
  selector:
    app: cloudcart-backend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

  type: NodePort
