kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudcart-frontend-service

spec:
  selector:
    app: cloudcart-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
