kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cloudcart.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cloudcart-backend-service
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: cloudcart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcart-frontend-service
                port:
                  number: 80
